--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a:hover{
 	text-decoration: underline;
 	/*color: #1919FF;*/
 }
+
 .right {
 	float: right;
 	margin-top: -20px;
@@ -28,11 +29,15 @@ a:hover{
 }
 
 #nav_background{
+	position: fixed;
+	left: 0;
+	right: 0;
 	background-color: #3C3C38;
 	margin-top: -25px;
 	height: 35px;
-	z-index: 0;
-	border-radius: 10px;
+	width: 100%;
+	z-index: -1;
+	/*border-radius: 10px;*/
 }
 
 #logo {
@@ -58,6 +63,7 @@ a:hover{
 
 #photo {
 	margin-bottom: -6px;
+	border-radius: 50%;
 }
 
 #search {
@@ -105,6 +111,37 @@ a:hover{
 }
 
 #footer {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	position: absolute;
+	width: 100%;
+	background-color: #F2F2F2;
+	border-top: 1px solid #e4e4e4;
+	line-height: 40px;
+}
+
+#footer .left{
+	margin-left: 30px;
+	display: inline;
+}
+
+#footer .footer_right {
+	margin-right: 30px;
+	float: right;
+}
+
+#footer .left, #footer .footer_right {
+	margin-bottom: 10px;
+}
+
+#footer a{
+	margin: 5px 5px 0px 5px;
+	color: #40402b;
+}
+
+
+/*#footer {
 	background-color: #F2F2F2;
 	position: fixed;
 	height: 40px;
