--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a:hover{
 	padding-top: 76px;
 	padding-bottom: 13px;
 	text-align: -webkit-center;
+	text-align: -moz-center;
 
 }
 
@@ -67,6 +68,7 @@ a:hover{
 }
 
 #search {
+	text-align: -moz-center;
 	text-align: -webkit-center;
 	padding-bottom: 15px;
 }
@@ -84,6 +86,7 @@ a:hover{
 }
 
 #buttons {
+	text-align: -moz-center;
 	text-align: -webkit-center;
 }
 
@@ -98,6 +101,7 @@ a:hover{
 }
 
 #QA {
+	text-align: -moz-center;
 	text-align: -webkit-center;
 }
 
