--- a/style.css
+++ b/style.css
@@ -128,14 +128,12 @@ a:hover{
 #footer .left {
 	margin-left: 30px;
 	display: inline;
+	margin-bottom: 10px;
 }
 
 #footer .footer_right {
 	margin-right: 30px;
 	float: right;
-}
-
-#footer .left, #footer .footer_right {
 	margin-bottom: 10px;
 }
 
